Version 1.6 (unreleased)

* Added modules_install target in Makefile

* Asynchronous operations will not be scheduled if zero
copy is disabled.

* Added SHA224. Patch by Yashpal Dutta.


Version 1.5 (released 2012-08-04)

* Fixes in AEAD support. Patches by Jaren Johnston.

* Simplifications in memory locking. Patch by Phil Sutter.

* Allow empty plaintext and authenticated data in AEAD 
ciphers. Patch by Jaren Johnston.


Version 1.4 (released 2012-03-15)

* Correctly report hw accelerated ciphers.


Version 1.3 (released 2012-02-29)

* Return EBADMSG instead of ECANCELED on tag verification
failure in authenc modes.

* COP_FLAG_RESET can be combined with COP_FLAG_UPDATE for
efficiency.

* Added more test cases.

* Automatically set public permissions for the device


Version 1.2 (released 2012-02-24)

* In kernels that do not distinguish between hw 
accelerated ciphers or not set the SIOP_FLAG_KERNEL_DRIVER_ONLY
flag based on driver name.

* camelia was renamed to camellia.

* Added COP_FLAG_RESET to allow resetting the state
in multi-update.

* Corrected issue in ARM processors with mv_cesa.


Version 1.1 (released 2012-02-20)

* Fixed alignment issue in speed.c

* Defined HASH_MAX_LEN in cryptodev.h

* CIOCGSESSINFO ioctl() sets the SIOP_FLAG_KERNEL_DRIVER_ONLY 
flag if the driver is only available through kernel
driver (and is not just software cipher).

* Added new encryption ioctl, CIOCAUTHCRYPT, which
combines authentication and encryption. Operates
in AEAD, TLS and SRTP modes (the API might change
in later versions).


Version 1.0 (released 2011-04-12)

* Several fixes in the included examples. Based on
patches by Vladimir Zapolskiy.


Version 0.9 (released 2011-02-11)

* Added additional test tools:
  - sha_speed does performance testing of SHA1 and SHA256
  - hashcrypt_speed additionally encrypts with AES128 and AES256

* Allow updating the IV in userspace via the COP_FLAG_WRITE_IV
flag.

* Export the alignmask in an OCF compatible way.
